tests/ui/privacy/private-inferred-type-3.stderr
error: type `fn() {ext::priv_fn}` is private
  --> $DIR/auxiliary/private-inferred-type.rs:27:5
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
LL |     priv_fn;
   |     ^^^^^^^ private type
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: static `ext::PRIV_STATIC` is private
  --> $DIR/auxiliary/private-inferred-type.rs:28:5
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
LL |     priv_fn;
LL |     PRIV_STATIC;
   |     ^^^^^^^^^^^ private static
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: type `ext::PrivEnum` is private
  --> $DIR/auxiliary/private-inferred-type.rs:29:5
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
...
LL |     PrivEnum::Variant;
   |     ^^^^^^^^^^^^^^^^^ private type
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: type `fn() {<u8 as ext::PrivTrait>::method}` is private
  --> $DIR/auxiliary/private-inferred-type.rs:31:5
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
...
LL |     <u8 as PrivTrait>::method;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ private type
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: type `fn(u8) -> ext::PrivTupleStruct {ext::PrivTupleStruct}` is private
  --> $DIR/auxiliary/private-inferred-type.rs:33:5
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
...
LL |     PrivTupleStruct;
   |     ^^^^^^^^^^^^^^^ private type
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: type `fn(u8) -> PubTupleStruct {PubTupleStruct}` is private
  --> $DIR/auxiliary/private-inferred-type.rs:34:5
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
...
LL |     PubTupleStruct;
   |     ^^^^^^^^^^^^^^ private type
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: type `for<'a> fn(&'a Pub<u8>) {Pub::<u8>::priv_method}` is private
  --> $DIR/auxiliary/private-inferred-type.rs:35:14
   |
LL | pub macro m() {
   | ----------- in this expansion of `ext::m!`
...
LL |     Pub(0u8).priv_method();
   |              ^^^^^^^^^^^ private type
   |
  ::: $DIR/private-inferred-type-3.rs:16:5
   |
LL |     ext::m!();
   |     --------- in this macro invocation

error: aborting due to 7 previous errors

